# Command-Control_Fiddling

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  RickRoll.py  TODOs.txt  control_structure.txt  makef.old  notes.txt
Notes+Examples/: Makefile  RickRoll.py  beacon.c  control_structure.txt  example.mfst  libssh2_example.c  objldr.c  parsing.c  proxy.c  server_forward.c  server_test.c  so_malloc_test.c  structure.txt  thingy.py
agent/: CMakeLists.txt  agent.h  config.h  shell.h
agent/includes/: agent.h  b64.h  beacon.h  config.h  examples_common.h  misc.h  shell.h  tasks.h
agent/src/: agent.c  agent.cpp  b64.cpp  beacon.cpp  client.c  main.cpp  misc.cpp  module.cpp  shell.c  shell.cpp  tasks.cpp
clientSrc/: agent.c  agent.h  b64.c  b64.h  beacon.c  beacon.h  client  client.c  config.h  examples_common.h  main_window.ui  notes_on_wtf.txt  peda-session-python3.8.txt  shell.c  shell.h
common/includes/: common.h  log.h  tasking.h  types.h
common/src/: common.cpp  tasking.cpp
python/: design.py  dialogues.py  exampleVideoQT.py  management.py  misc.py  paletteColors.py  session.py  shell.py  terminal.py  update_uis.sh
python/ui/: agent_command_dialogue.ui  agent_compile_dialogue.ui  agent_download_dialogue.ui  agent_registration_dialogue.ui  main_window.ui  manager_connection_dialogue.ui  server_backend_dialogue.ui  terminal_dialogue.ui
server/: CMakeLists.txt  agents.cpp  agents.h  b64.cpp  common.cpp  log.txt  server.h  server_module.cpp  shell.cpp  typedefs.h
server/includes/: api.h  auth.h  common.h  log.h  module.h  netinst.h  server.h  tasking.h  types.h  values.h
server/old/: agents.cpp  agents.h  authenticate.cpp  authenticate.h  b64.cpp  b64.h  common.cpp  common.h  connection.cpp  connection.h  execs.h  log.cpp  log.h  misc.cpp  misc.h  server.cpp  server.h  server_module.cpp  server_module.h  shell.cpp  shell.h  transport.h  typedefs.h
server/src/: common.cpp  main.cpp  module.cpp  netinst.cpp  server.cpp  tasking.cpp
server/ssh_trans_new/: CMakeLists.txt  ssh_transport.cpp  ssh_transport.h
server/ssh_transport/: ssh_transport.cpp  ssh_transport.h
serverSrc/: agents.c  agents.cpp  agents.h  authenticate.c  authenticate.cpp  authenticate.h  b64.c  b64.cpp  b64.h  common.cpp  common.h  config.h  connection.cpp  connection.h  execs.h  list.c  list.cpp  list.h  log.c  log.cpp  log.h  misc.c  misc.cpp  misc.h  server  server.c  server.cpp  server.h  shell.h  ssh_transport.cpp  ssh_transport.h  transport.h  typedefs.h
serverSrc/agents/TEST_AGENT/: agent.mfst  info.txt
serverSrc/ssh_transport/: ssh_transport.cpp  ssh_transport.h
tests/: CMakeLists.txt
tests/includes/: catch.hpp
tests/src/: common_tests.cpp
